SignalCommand and InternalChannelCommand: add at least and at most

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -1223,6 +1223,10 @@ components:
           type: string
         signalChannelName:
           type: string
+        atLeast:
+          type: integer
+        atMost:
+          type: integer
     InterStateChannelCommand:
       type: object
       required:
@@ -1233,6 +1237,10 @@ components:
           type: string
         channelName:
           type: string
+        atLeast:
+          type: integer
+        atMost:
+          type: integer
     TimerResult:
       type: object
       required:
