--- a/iwf.yaml
+++ b/iwf.yaml
@@ -326,6 +326,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /api/v1/workflow/triggerContinueAsNew:
+    post:
+      summary: "trigger ContinueAsNew for a workflow"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TriggerContinueAsNewRequest'
+      responses:
+        '200':
+          description: successful operation
+          content: {}
+        '400':
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   # Below APIs are hosted by iWF SDK for iWF server to call
   /api/v1/workflowState/start:
     post:
@@ -582,7 +600,7 @@ components:
         - LOAD_PARTIAL_WITHOUT_LOCKING
         - LOAD_PARTIAL_WITH_EXCLUSIVE_LOCK
         - LOAD_NONE
-    #            - LOAD_ALL_WITH_EXCLUSIVE_LOCK
+        - LOAD_ALL_WITH_PARTIAL_LOCK
     WorkerErrorResponse:
       type: object
       properties:
@@ -1117,6 +1135,15 @@ components:
       properties:
         stateCompletionOutput:
           $ref: '#/components/schemas/StateCompletionOutput'
+    TriggerContinueAsNewRequest:
+      type: object
+      required:
+        - workflowId
+      properties:
+        workflowId:
+          type: string
+        workflowRunId:
+          type: string
     StateDecision:
       type: object
       properties:
@@ -1232,6 +1259,10 @@ components:
           type: string
         signalChannelName:
           type: string
+        atLeast:
+          type: integer
+        atMost:
+          type: integer
     InterStateChannelCommand:
       type: object
       required:
@@ -1242,6 +1273,10 @@ components:
           type: string
         channelName:
           type: string
+        atLeast:
+          type: integer
+        atMost:
+          type: integer
     TimerResult:
       type: object
       required:
@@ -1306,10 +1341,14 @@ components:
       properties:
         disableSystemSearchAttribute:
           type: boolean
+        enabledExecutingStateExecutionIds:
+          type: boolean
         continueAsNewThreshold:
           type: integer
         continueAsNewPageSizeInBytes:
           type: integer
+        optimizeActivity:
+          type: boolean
     Context:
       type: object
       required:
