--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -563,6 +563,8 @@ components:
           type: array
           items:
             type: string
+        useKeyAsPrefix:
+          type: boolean
     PersistenceLoadingType:
       type: string
       enum:
