--- a/iwf.yaml
+++ b/iwf.yaml
@@ -593,6 +593,8 @@ components:
           type: array
           items:
             type: string
+        useKeyAsPrefix:
+          type: boolean
     PersistenceLoadingType:
       type: string
       enum:
