--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -1208,13 +1208,15 @@ components:
       type: object
       required:
         - commandId
-        - firingUnixTimestampSeconds
+      # either firingUnixTimestampSeconds or durationSeconds must be provided
       properties:
         commandId:
           type: string
         firingUnixTimestampSeconds:
           type: integer
           format: int64
+        durationSeconds:
+          type: integer
     SignalCommand:
       type: object
       required:
