--- a/iwf.yaml
+++ b/iwf.yaml
@@ -1244,13 +1244,15 @@ components:
       type: object
       required:
         - commandId
-        - firingUnixTimestampSeconds
+      # either firingUnixTimestampSeconds or durationSeconds must be provided
       properties:
         commandId:
           type: string
         firingUnixTimestampSeconds:
           type: integer
           format: int64
+        durationSeconds:
+          type: integer
     SignalCommand:
       type: object
       required:
