--- a/iwf.yaml
+++ b/iwf.yaml
@@ -1253,6 +1253,7 @@ components:
           format: int64
         durationSeconds:
           type: integer
+          format: int64
     SignalCommand:
       type: object
       required:
