--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -628,6 +628,10 @@ components:
           type: string
         startStateId:
           type: string
+        waitForCompletionStateIds:
+          type: array
+          items:
+            type: string
         waitForCompletionStateExecutionIds:
           type: array
           items:
