--- a/iwf.yaml
+++ b/iwf.yaml
@@ -1132,12 +1132,15 @@ components:
       type: object
       required:
         - workflowId
-        - stateExecutionId
       properties:
         workflowId:
           type: string
-        stateExecutionId:
+        stateExecutionId: # either stateExecutionId or stateId + waitForKey must be provided
           type: string
+        stateId:
+          type: string
+        waitForKey:
+            type: string
         waitTimeSeconds: # amount of time that the request will be waiting for, only works for getWithWait API
           type: integer
     WorkflowWaitForStateCompletionResponse:
@@ -1189,6 +1192,8 @@ components:
           $ref: '#/components/schemas/EncodedObject'
         stateOptions:
           $ref: '#/components/schemas/WorkflowStateOptions'
+        waitForKey:
+          type: string
     CommandRequest:
       type: object
       properties:
