Add commandId requirement back for commandResults

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -1257,6 +1257,7 @@ components:
       type: object
       required:
         - timerStatus
+        - commandId # this is required for backward compatibility. Remove it when SDK is updated to support empty commandId.
       properties:
         commandId:
           type: string
@@ -1272,6 +1273,7 @@ components:
       required:
         - signalChannelName
         - signalRequestStatus
+        - commandId # this is required for backward compatibility. Remove it when SDK is updated to support empty commandId.
       properties:
         commandId:
           type: string
@@ -1286,6 +1288,7 @@ components:
       required:
         - channelName
         - requestStatus
+        - commandId # this is required for backward compatibility. Remove it when SDK is updated to support empty commandId.
       properties:
         commandId:
           type: string
