--- a/iwf.yaml
+++ b/iwf.yaml
@@ -576,7 +576,8 @@ components:
     IDReusePolicy:
       type: string
       enum:
-        - ALLOW_IF_PREVIOUS_EXISTS_ABNORMALLY
+        - ALLOW_IF_PREVIOUS_EXISTS_ABNORMALLY # Keeping typo enum for backwards compatibility
+        - ALLOW_IF_PREVIOUS_EXITS_ABNORMALLY
         - ALLOW_IF_NO_RUNNING
         - DISALLOW_REUSE
         - ALLOW_TERMINATE_IF_RUNNING
