IWF-136: Support initial data attributes when starting workflow

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -539,6 +539,10 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/SearchAttribute'
+        dataAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
         workflowConfigOverride:
           $ref: '#/components/schemas/WorkflowConfig'
         useMemoForDataAttributes:
