IWF-137: Adding waitUntilApiDataAttributesLoadingPolicy and executeApiDataAttributesLoadingPolicy, deprecate dataAttributesLoadingPolicy

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -503,7 +503,9 @@ components:
       properties:
         searchAttributesLoadingPolicy:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
-        dataAttributesLoadingPolicy:
+        waitUntilApiDataAttributesLoadingPolicy:
+          $ref: '#/components/schemas/PersistenceLoadingPolicy'
+        executeApiDataAttributesLoadingPolicy:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
         waitUntilApiDataAttributesLoadingPolicy:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
