keep dataAttributesLoadingPolicy to make this not a breaking change

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -503,6 +503,8 @@ components:
       properties:
         searchAttributesLoadingPolicy:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
+        dataAttributesLoadingPolicy:
+          $ref: '#/components/schemas/PersistenceLoadingPolicy'
         waitUntilApiDataAttributesLoadingPolicy:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
         executeApiDataAttributesLoadingPolicy:
