IWF-137: Allow to use separate persistency loading policy for waitUntil (#63)
* IWF-137: Adding waitUntilApiDataAttributesLoadingPolicy and executeApiDataAttributesLoadingPolicy, deprecate dataAttributesLoadingPolicy

* keep dataAttributesLoadingPolicy to make this not a breaking change

* dataAttributesLoadingPolicy is no longer deprecated

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -505,6 +505,10 @@ components:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
         dataAttributesLoadingPolicy:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
+        waitUntilApiDataAttributesLoadingPolicy:
+          $ref: '#/components/schemas/PersistenceLoadingPolicy'
+        executeApiDataAttributesLoadingPolicy:
+          $ref: '#/components/schemas/PersistenceLoadingPolicy'
         waitUntilApiTimeoutSeconds: # NOTE: this is the timeout for the single attempt of Cadence/Temporal activity(start to close timeout)
           type: integer
         executeApiTimeoutSeconds: # NOTE: this is the timeout for the single attempt of Cadence/Temporal activity(start to close timeout)
