--- a/iwf.yaml
+++ b/iwf.yaml
@@ -1366,10 +1366,16 @@ components:
     WorkflowConfig:
       type: object
       properties:
-        disableSystemSearchAttribute:
+        disableSystemSearchAttribute: # deprecated in favor of enabledExecutingStateExecutionIds
           type: boolean
-        enabledExecutingStateExecutionIds:
+        enabledExecutingStateExecutionIds: # deprecated in favor of executingStateIdMode
           type: boolean
+        executingStateIdMode:
+          type: string
+          enum:
+            - ENABLED_FOR_ALL
+            - ENABLED_FOR_STATES_WITH_WAIT_UNTIL
+            - DISABLED
         continueAsNewThreshold:
           type: integer
         continueAsNewPageSizeInBytes:
