IWF-129: Add executingStateIdMode (#67)
* IWF-129: Add executingStateIdMode

* IWF-129: Remove enabledExecutingStateExecutionIds

--- a/iwf.yaml
+++ b/iwf.yaml
@@ -1366,10 +1366,14 @@ components:
     WorkflowConfig:
       type: object
       properties:
-        disableSystemSearchAttribute:
+        disableSystemSearchAttribute: # deprecated in favor of executingStateIdMode
           type: boolean
-        enabledExecutingStateExecutionIds:
-          type: boolean
+        executingStateIdMode:
+          type: string
+          enum:
+            - ENABLED_FOR_ALL
+            - ENABLED_FOR_STATES_WITH_WAIT_UNTIL
+            - DISABLED
         continueAsNewThreshold:
           type: integer
         continueAsNewPageSizeInBytes:
