--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -1327,10 +1327,14 @@ components:
     WorkflowConfig:
       type: object
       properties:
-        disableSystemSearchAttribute: # deprecated in favor of enabledExecutingStateExecutionIds
+        disableSystemSearchAttribute: # deprecated in favor of executingStateIdMode
           type: boolean
-        enabledExecutingStateExecutionIds:
-          type: boolean
+        executingStateIdMode:
+          type: string
+          enum:
+            - ENABLED_FOR_ALL
+            - ENABLED_FOR_STATES_WITH_WAIT_UNTIL
+            - DISABLED
         continueAsNewThreshold:
           type: integer
         continueAsNewPageSizeInBytes:
