IWF-119: Fix WorkflowAlreadyStartedOptions

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -564,7 +564,7 @@ components:
           $ref: '#/components/schemas/WorkflowConfig'
         useMemoForDataAttributes:
           type: boolean
-        workflowStartOptions:
+        workflowAlreadyStartedOptions:
           $ref: '#/components/schemas/WorkflowAlreadyStartedOptions'
     IDReusePolicy:
       type: string
