--- a/iwf.yaml
+++ b/iwf.yaml
@@ -587,7 +587,7 @@ components:
           $ref: '#/components/schemas/IDReusePolicy'
         useMemoForDataAttributes:
           type: boolean
-        workflowStartOptions:
+        workflowAlreadyStartedOptions:
           $ref: '#/components/schemas/WorkflowAlreadyStartedOptions'
     WorkflowIDReusePolicy:
       type: string
