--- a/iwf.yaml
+++ b/iwf.yaml
@@ -1476,3 +1476,30 @@ components:
           format: int64
         attempt: # it's from Attempt of Cadence/Temporal activity.GetInfo
           type: integer
+    EventType:
+      type: string
+      enum:
+        - WORKFLOW_START_EVENT
+        - WORKFLOW_COMPLETE_EVENT
+        - SET_DATA_ATTRIBUTES
+        - SET_SEARCH_ATTRIBUTES
+    IwfEvent:
+      type: object
+      required:
+        - eventType
+        - workflowType
+        - workflowId
+        - workflowRunId
+      properties:
+        eventType:
+          $ref: '#/components/schemas/EventType'
+        workflowType:
+          type: string
+        workflowId:
+          type: string
+        workflowRunId:
+          type: string
+        stateId:
+          type: string # only applicable for certain events
+        stateExecutionId:
+          type: string # only applicable for certain events
