--- a/iwf.yaml
+++ b/iwf.yaml
@@ -1498,7 +1498,13 @@ components:
           type: string
         workflowRunId:
           type: string
-        stateId:
-          type: string # only applicable for certain events
-        stateExecutionId:
-          type: string # only applicable for certain events
+        stateId: # only applicable for certain events
+          type: string
+        stateExecutionId: # only applicable for certain events
+          type: string
+        startTimestamp: # only applicable for certain events
+          type: integer
+          format: int64
+        endTimestamp: # only applicable for certain events
+          type: integer
+          format: int64
